--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ target
 CharObject.java
 Cryptoanalysis.java
 *.txt
-.DS_Store
 pom.xml
-.DS_Store.DS_Store
+# Ignore Mac DS_Store files
 .DS_Store
+**/.DS_Store
+
